# interview_practice

./: README.md  pyproject.toml
24-03-08_openai_finetune/: main.py  transform_data.py
24-03-08_openai_finetune/data/: emotions_03112024_200_test.jsonl  emotions_03112024_400_train.jsonl
24-03-12_webcrawler/: main.py
24-03-13_openai_embeddings_rag/: main.py
24-03-13_openai_tools/: main.py
